# mulle-unicode

./: .gitattributes  .gitignore  .touch  .travis.yml  CMakeLists.txt  README.md  RELEASENOTES.md  clib.json  package.json
.github/workflows/: semgrep.yml
.mulle-env/share/: environment-aux.sh  environment-project.sh
.mulle/etc/env/: environment-global.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh  environment-user-nat-os-linux.sh
.mulle/etc/sourcetree/: config
.mulle/share/env/: environment-plugin.sh
.mulle/share/sourcetree/: config
cmake/: DependenciesAndLibraries.cmake  Headers.cmake  _Headers.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: Environment.cmake  Executable.cmake  Library.cmake  Standalone.cmake  StandaloneC.cmake
cola/: api.md.bud  description.md.bud  properties.plist
dox/: API_CONVERSION.md  API_CTYPE.md  BUILD.md
research/: word-stat.sh
src/: _mulle-utf-include-private.h  include-private.h  include.h  mulle-unicode-ctype.h  mulle-unicode-is-alphanumeric.c  mulle-unicode-is-alphanumeric.h  mulle-unicode-is-capitalized.c  mulle-unicode-is-capitalized.h  mulle-unicode-is-control.c  mulle-unicode-is-control.h  mulle-unicode-is-decimaldigit.c  mulle-unicode-is-decimaldigit.h  mulle-unicode-is-decomposable.c  mulle-unicode-is-decomposable.h  mulle-unicode-is-identifiercontinuation.c  mulle-unicode-is-identifiercontinuation.h  mulle-unicode-is-identifierstart.c  mulle-unicode-is-identifierstart.h  mulle-unicode-is-legalcharacter.c  mulle-unicode-is-legalcharacter.h  mulle-unicode-is-letter.c  mulle-unicode-is-letter.h  mulle-unicode-is-lowercase.c  mulle-unicode-is-lowercase.h  mulle-unicode-is-newline.c  mulle-unicode-is-newline.h  mulle-unicode-is-nonbase.c  mulle-unicode-is-nonbase.h  mulle-unicode-is-noncharacter.c  mulle-unicode-is-noncharacter.h  mulle-unicode-is-privatecharacter.c  mulle-unicode-is-privatecharacter.h  mulle-unicode-is-punctuation.c  mulle-unicode-is-punctuation.h  mulle-unicode-is-symbol.c  mulle-unicode-is-symbol.h  mulle-unicode-is-uppercase.c  mulle-unicode-is-uppercase.h  mulle-unicode-is-validurlfragment.c  mulle-unicode-is-validurlfragment.h  (+76 more)
src/generic/: include-private.h  include.h
src/reflect/: _mulle-unicode-include-private.h  _mulle-unicode-include.h  _mulle-unicode-provide.h  _mulle-unicode-versioncheck.h
src/unicode/: isalphanumeric-bitmap.inc  isalphanumeric-utf16-inv.inc  isalphanumeric-utf32-inv.inc  iscapitalized-bitmap.inc  iscapitalized-utf16.inc  iscontrol-utf16.inc  iscontrol-utf32.inc  isdecimaldigit-utf16.inc  isdecimaldigit-utf32.inc  isdecomposable-bitmap.inc  isdecomposable-utf16.inc  isdecomposable-utf32.inc  isdigit-utf16.inc  isdigit-utf32.inc  isidentifiercontinuation-bitmap.inc  isidentifiercontinuation-utf16.inc  isidentifiercontinuation-utf32.inc  isidentifierstart-bitmap.inc  isidentifierstart-utf16.inc  isidentifierstart-utf32.inc  islegal-bitmap.inc  islegal-utf16.inc  islegal-utf32.inc  isletter-bitmap.inc  isletter-utf16-inv.inc  isletter-utf32-inv.inc  islowercase-bitmap.inc  islowercase-utf16.inc  islowercase-utf32.inc  isnonbase-bitmap.inc  isnonbase-utf16.inc  isnonbase-utf32.inc  isnumeric-utf16.inc  isnumeric-utf32.inc  isprivate-utf16.inc  isprivate-utf32.inc  ispunctuation-bitmap.inc  ispunctuation-utf16.inc  ispunctuation-utf32.inc  issymbol-bitmap.inc  (+16 more)
test/: coverage.json
test/.mulle-env/share/: environment-project.sh
test/.mulle/etc/env/: environment-host-ci-prerelease.sh  (+2 more)
test/unicode/: isidentifiercontinuation.c  isidentifiercontinuation.stdout  isidentifierstart.c  isidentifierstart.stdout  iszero.c  iszero.stdout  planes.c  planes.stdout  tolower.c  tolower.stdout  totitle.c  toupper.c  toupper.stdout  zeroisbad.c  zeroisbad.stdout
unicode/: create-all.sh  create-bitmap.sh  create-category-set.sh  create-map.sh  create-set.sh  template.c  upgrade-after-create.sh
(+2 files in other folders)
